Bug 266732 - [Debug] ASSERTION FAILED: m_activeConnections.contains(connection)
Summary: [Debug] ASSERTION FAILED: m_activeConnections.contains(connection)
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Sihui Liu
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-12-20 15:43 PST by Sihui Liu
Modified: 2024-01-02 15:49 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sihui Liu 2023-12-20 15:43:48 PST
...
Comment 1 Sihui Liu 2023-12-20 15:44:07 PST
rdar://119363590
Comment 2 Sihui Liu 2023-12-20 16:16:17 PST
Pull request: https://github.com/WebKit/WebKit/pull/22137
Comment 3 EWS 2024-01-02 15:49:52 PST
Committed 272585@main (f93a6655d71b): <https://commits.webkit.org/272585@main>

Reviewed commits have been landed. Closing PR #22137 and removing active labels.