Source/WebKit/NetworkProcess/storage/CacheStorageManager.h
@@ -69,6 +69,7 @@ public:
     void requestSpace(uint64_t size, CompletionHandler<void(bool)>&&);
     void sizeIncreased(uint64_t amount);
     void sizeDecreased(uint64_t amount);
+    void reset();
 
 private:
     void makeDirty();
@@ -81,7 +82,7 @@ private:
     bool m_isInitialized { false };
     uint64_t m_updateCounter;
     std::optional<uint64_t> m_size;
-    std::pair<uint64_t, size_t> m_pendingSize;
+    std::pair<uint64_t, HashSet<WebCore::DOMCacheIdentifier>> m_pendingSize;
     String m_path;
     FileSystem::Salt m_salt;
     CacheStorageRegistry& m_registry;
